tests/macros/int/plugin.rs
fn main() {
    let q = inquisition::questions![int { plugin: todo!() }];
}
